# Sparrow

./: .gitignore  README.md
CCS/: CMakeLists.txt
CCS/main/: CMakeLists.txt  main.c
CCS/main/app_task/: sys_config.h
Project/Android/: settings.gradle
Project/Android/app/: build.gradle
Project/Android/gradle/: libs.versions.toml
Software/Android/: build.gradle  settings.gradle
Software/Android/app/: build.gradle
Software/QT-rebuid/Sparrow/: Resources.qrc  Sparrow.pro  dialog_bilibili_cfg.cpp  dialog_bilibili_cfg.h  dialog_bilibili_cfg.ui  dialog_ble_name.cpp  dialog_ble_name.h  dialog_ble_name.ui  dialog_mqtt_cfg.cpp  dialog_mqtt_cfg.h  dialog_mqtt_cfg.ui  dialog_sleep_time.cpp  dialog_sleep_time.h  dialog_sleep_time.ui  dialog_weather_cfg.cpp  dialog_weather_cfg.h  dialog_weather_cfg.ui  dialog_wifi_cfg.cpp  dialog_wifi_cfg.h  dialog_wifi_cfg.ui  driver_usb.cpp  driver_usb.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  system.cpp  system.h
Software/QT-rebuid/build-Sparrow-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Sparrow.Debug  object_script.Sparrow.Release  ui_dialog_bilibili_cfg.h  ui_dialog_ble_name.h  ui_dialog_mqtt_cfg.h  ui_dialog_sleep_time.h  ui_dialog_weather_cfg.h  ui_dialog_wifi_cfg.h  ui_mainwindow.h
Software/Windows/: Sparrow.pro  form_entrance.cpp  form_entrance.h  form_mainwindow.cpp  form_mainwindow.h  icon.qrc  interface.cpp  interface.h  main.cpp  msg_handler.cpp  msg_handler.h  serialInterface.cpp  serialInterface.h
Software/Windows/system/: filemanager.cpp  filemanager.h
Software/build-Sparrow-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Sparrow.Debug  object_script.Sparrow.Release
Software/build-Sparrow-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/config/: test.txt
Software/build-Sparrow-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/debug/: moc_form_chatsetting.cpp  moc_form_entrance.cpp  moc_form_hidewindow.cpp  moc_form_mainwindow.cpp  moc_globalkeyevent.cpp  moc_globalmouseevent.cpp  moc_hid_function.cpp  moc_interface_chat.cpp  moc_msg_handler.cpp  moc_qxtglobalshortcut.cpp  moc_serialInterface.cpp  moc_system_init.cpp  moc_usb_listener.cpp  qrc_icon.cpp  qrc_qss.cpp
Sparrow/: settings.gradle
Sparrow/app/: build.gradle
Sparrow/gradle/wrapper/: gradle-wrapper.properties
doc/: BOM_Main_Board_Release_V1.0_Sparrow_Main_Board_2024-11-10.xlsx  PickAndPlace_PCB3_2024-05-20.xlsx  Sparrow cdc通信协议.docx  Sparrow hid通信协议.docx  mqtt通信topic.xlsx  参考来源.txt  蓝牙通信协议.docx
doc/3D/shell/: ServoPosTest.SLDPRT  ServoPosTest.STL  Servo_Replace.SLDPRT  Servo_Replace.V1.2STL.STL  Servo_ReplaceV1.0.STL  Servo_ReplaceV1.1.STL  Servo_ReplaceV1.2.STL  Servo_ReplaceV1.3.STL  Servo_ReplaceV1.4.STL  Servo_ReplaceV1.5.STL  Servo_Replace_ReleaseV1.0.STL  Servo_Replace_ReleaseV1.1.STL  Servo_Replace_ReleaseV1.2.STL  Servo_Replace_ReleaseV1.3.STL  Servo_bottom.SLDPRT  Servo_bottom.STL  Sparrow_bottom.SLDPRT  Sparrow_bottomV2.1.STL  Sparrow_bottomV2.10.STL  Sparrow_bottomV2.11.STL  Sparrow_bottomV2.2.STL  Sparrow_bottomV2.3.STL  Sparrow_bottomV2.4.STL  Sparrow_bottomV2.5.STL  Sparrow_bottomV2.6.STL  Sparrow_bottomV2.7.STL  Sparrow_bottomV2.8.STL  Sparrow_bottomV2.9.STL  Sparrow_bottomV2.SLDPRT  Sparrow_bottom_ReleaseV1.0.STL  Sparrow_bottom_ReleaseV1.1.STL  Sparrow_bottom_ReleaseV1.2.STL  Sparrow_lcd_support.SLDPRT  Sparrow_lcd_support.STL  Sparrow_lcd_supportV1.0.STL  Sparrow_lcd_supportV1.1.STL  Sparrow_lcd_supportV1.2.STL  Sparrow_lcd_supportV1.3.STL  Sparrow_lcd_supportV1.4.STL  Sparrow_lcd_supportV1.5.STL  (+26 more)
efuse_cfg/: sdkconfig.old
efuse_cfg/main/: blink_example_main.c
station/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  sys_config.h
station/app_task/task_battery/: CMakeLists.txt  task_battery.c  task_battery.h
station/app_task/task_bluetooth/: CMakeLists.txt  task_bluetooth.c  task_bluetooth.h
station/app_task/task_display/: CMakeLists.txt  task_display.c  task_display.h
station/app_task/task_http/: CMakeLists.txt  task_http.c  task_http.h
station/app_task/task_led/: CMakeLists.txt  task_led.c  task_led.h
station/app_task/task_mqtt/: CMakeLists.txt  task_mqtt.c  task_mqtt.h
station/app_task/task_rtc/: CMakeLists.txt  task_rtc.c  task_rtc.h
station/app_task/task_servo/: CMakeLists.txt  task_servo.c  task_servo.h
station/app_task/task_usb/: CMakeLists.txt  task_usb.c  task_usb.h
station/drivers/: CMakeLists.txt
station/drivers/drv_adc/: CMakeLists.txt  drv_adc.c  drv_adc.h
station/drivers/drv_ble/: CMakeLists.txt  drv_ble.c  drv_ble.h
station/drivers/drv_button/: CMakeLists.txt  drv_button.c  drv_button.h
station/drivers/drv_http/: CMakeLists.txt  drv_http.c  drv_http.h
station/drivers/drv_json/: CMakeLists.txt  drv_jsonHandler.c  drv_jsonHandler.h
station/drivers/drv_lcd/: CMakeLists.txt  drv_lcd.c  drv_lcd.h
station/drivers/drv_led/: CMakeLists.txt  drv_led.c  drv_led.h
station/drivers/drv_mqtt/: CMakeLists.txt  driver_mqtt.c  driver_mqtt.h  drv_mqtt.c  drv_mqtt.h
station/drivers/drv_nvs/: CMakeLists.txt  drv_nvs.c  drv_nvs.h
station/drivers/drv_power/: CMakeLists.txt  drv_power.c  drv_power.h
station/drivers/drv_servo/: CMakeLists.txt  drv_servo.c  drv_servo.h
station/drivers/drv_usb/: CMakeLists.txt  drv_hid.c  drv_hid.h  drv_usb.c  drv_usb.h
station/drivers/wifi/: CMakeLists.txt  wifi_station.c  wifi_station.h
station/main/: CMakeLists.txt  idf_component.yml  main.c  startup.c  startup.h  systemInfo.c  systemInfo.h
station/src/: CMakelists.txt
station/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image1.c  ui_comp_image1.h
station/src/imgs/: img_sparrow.c  ui_img_919562436.c  ui_img_background1_png.c  ui_img_background2_png.c  ui_img_background3_png.c  ui_img_background4_png.c  ui_img_background5_png.c  ui_img_background_png.c  ui_img_cpu_png.c  ui_img_memory_png.c  ui_img_sparrow.c  ui_img_tomato_clock.c  ui_img_weather0_png.c  ui_img_weather10_png.c  ui_img_weather11_png.c  ui_img_weather12_png.c  ui_img_weather13_png.c  ui_img_weather14_png.c  (+34 more)
(+227 files in other folders)
