idf_component_register(SRCS "drv_dac/drv_adc.c"
                            "drv_usb/drv_usb.c"
                            "drv_ble/drv_ble.c"
                            "drv_nvs/drv_nvs.c"
                            "drv_json/drv_jsonHandler.c"
                            "drv_button/drv_button.c"
                            "drv_power/drv_power.c"
                        INCLUDE_DIRS "drv_dac"
                        "drv_ble"
                        "drv_json"
                        "managed_components"
                        "drv_button"
                        "drv_power"
)