idf_component_register(SRCS "main.c"
                            "../drivers/wifi/wifi_station.c"
                            "../drivers/drv_mqtt/driver_mqtt.c"
                            "../drivers/drv_adc/drv_adc.c"
                            "../app_task/task_servo/task_servo.c"
                            "../app_task/task_rtc/task_rtc.c"
                            "../app_task/task_battery/task_battery.c"
                            "../drivers/drv_usb/drv_hid.c"
                            "../drivers/drv_ble/drv_ble.c"
                            "../drivers/drv_led/drv_led.c"
                            "../app_task/task_bluetooth/task_bluetooth.c"
                            "../app_task/task_led/task_led.c"
                    INCLUDE_DIRS "."
                                "../drivers/drv_mqtt"
                                "../drivers/wifi"
                                "../drivers/drv_usb"
                                "../app_task"
                                "../app_task/task_servo"
                                "../app_task/task_battery"
                                "../app_task/task_rtc"
                                "../drivers/drv_ble"
                                "../drivers/drv_led"
                                "../app_task/task_bluetooth"
                                "../app_task/task_led")
