idf_component_register(SRCS "startup.c" "main.c"
                            "systemInfo.c"
                            "../drivers/wifi/wifi_station.c"
                            "../drivers/drv_mqtt/drv_mqtt.c"
                            "../drivers/drv_adc/drv_adc.c"
                            "../drivers/drv_lcd/drv_lcd.c"
                            "../app_task/task_servo/task_servo.c"
                            "../app_task/task_rtc/task_rtc.c"
                            "../app_task/task_battery/task_battery.c"
                            "../drivers/drv_usb/drv_usb.c"
                            "../drivers/drv_ble/drv_ble.c"
                            "../drivers/drv_led/drv_led.c"
                            "../app_task/task_bluetooth/task_bluetooth.c"
                            "../app_task/task_led/task_led.c"
                            "../drivers/drv_nvs/drv_nvs.c"
                            "../drivers/drv_json/drv_jsonHandler.c"
                            "../app_task/task_display/task_display.c"
                            "../drivers/drv_http/drv_http.c"
                            "../app_task/task_http/task_http.c"
                            "../app_task/task_usb/task_usb.c"
                            "../app_task/task_mqtt/task_mqtt.c"
                            "../drivers/drv_power/drv_power.c"
                    INCLUDE_DIRS "."
                                "../drivers/drv_mqtt"
                                "../drivers/wifi"
                                "../drivers/drv_usb"
                                "../drivers/drv_nvs"
                                "../drivers/drv_json"
                                "../drivers/drv_lcd"
                                "../app_task"
                                "../app_task/task_servo"
                                "../app_task/task_battery"
                                "../app_task/task_rtc"
                                "../drivers/drv_ble"
                                "../drivers/drv_led"
                                "../app_task/task_bluetooth"
                                "../app_task/task_led"
                                "../app_task/task_display"
                                "../drivers/drv_http"
                                "../app_task/task_http"
                                "../app_task/task_usb"
                                "../drivers/drv_power"
                                "../app_task/task_mqtt"
                                )
