idf_component_register(SRCS "task_display.c"
                            "../../drivers/drv_lcd/drv_lcd.c"
                            "../../src/ui/ui_startPage.c"
                            "../../src/ui/deviceBinding.c"
                            "../../src/ui/ui.c"
                            "../../src/ui/ui_Screen1.c"
                            "../../src/ui/ui_Screen2.c"
                            "../../src/ui/ui_Screen3.c"
                            "../../src/components/ui_comp.c"
                            "../../src/imgs/ui_img_919562436.c"
                            "../../src/ui/ui_helpers.c"
                            "../../src/ui/lv_port_indev.c"
                            "../../drivers/drv_button/drv_button.c"
                        INCLUDE_DIRS "."
                                     ".""../../managed_components"
                                     "../../drivers/drv_lcd"
                                     "../../src/ui"
                        REQUIRES   esp_event driver nvs_flash lvgl__lvgl esp_lcd esp_timer espressif__esp_lcd_ili9341 hal)